# ocaml-semsearch-jsoo

./: .gitignore  CITATION.cff  README.org  dune-workspace  export_model.sh  package.json
semsearch-jsoo/: dune-project  dune-workspace  sbert-jsoo.opam  semsearch-jsoo.opam  tfjs.opam
semsearch-jsoo/sbert-jsoo/lib/: dune  local_fs_handler.js  sbert_jsoo.ml
semsearch-jsoo/semsearch-jsoo/lib/: dune  semsearch_jsoo.ml
semsearch-jsoo/semsearch-jsoo/tests/: dune  jsoo.ml  test_tasks.txt
semsearch-jsoo/tfjs/lib/: dune  promise.ml  tfjs.ml  tfjs.mli  tfjs_intf.ml
to-tfjs/: .gitignore  export.py  model.py  requirements-frozen.txt  requirements.txt
